--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "node src/server/app.js",
+    "dev": "nodemon src/server/app.js",
     "test": "node tests/run-tests.js",
     "build:builder": "node scripts/build-builder.js"
   },
