--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "express-session": "^1.18.2",
     "helmet": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "sequelize": "^6.37.7",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "cross-env": "^10.0.0",
