--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "type": "module",
   "scripts": {
     "start": "cross-env AUTH_ENABLED=1 node src/server/app.js",
-    "dev": "cross-env AUTH_ENABLED=1 nodemon src/server/app.js",
-    "test": "npx --node-options=\"--experimental-vm-modules\" jest",
-    "test:watch": "npx --node-options=\"--experimental-vm-modules\" jest --watch",
-    "test:coverage": "npx --node-options=\"--experimental-vm-modules\" jest --coverage",
-    "cleanup:test-dbs": "node scripts/cleanup-test-dbs.js"
+    "dev": "cross-env AUTH_ENABLED=1 nodemon src/server/app.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
@@ -28,10 +24,6 @@
   },
   "devDependencies": {
     "cross-env": "^10.0.0",
-    "nodemon": "^3.1.10",
-    "jest": "^29.7.0",
-    "supertest": "^6.3.4",
-    "@jest/globals": "^29.7.0",
-    "jest-environment-node": "^29.7.0"
+    "nodemon": "^3.1.10"
   }
 }
